@@ -88,7 +88,7 @@ public enum DAO {
 			}
 		}
 		try{
-			Object entity = clazz.newInstance();
+			Object entity = clazz.getDeclaredConstructor().newInstance();
 			Field[] pk = DAOReflect.pk(entity);
 			for (int i = 0; i < pk.length; i++) {
 				DAOReflect.set(entity, pk[i], primaryKey[i]);
@@ -282,7 +282,7 @@ public enum DAO {
 			Field[] fields = DAOReflect.fields(entity, true); //entity.getClass().getDeclaredFields();
 			Object obj = null;
 			while(res.next()){
-				obj = entity.getClass().newInstance();
+				obj = entity.getClass().getDeclaredConstructor().newInstance();
 				for (int i = 0; i < fields.length; i++) {
 					//System.out.println(fields[i].getName());
 					setField(fields[i], obj, res);
@@ -318,7 +318,7 @@ public enum DAO {
 			Field[] fields = DAOReflect.fields(entity, true); //entity.getClass().getDeclaredFields();
 			Object obj = null;
 			if(res.next()){
-				obj = entity.getClass().newInstance();
+				obj = entity.getClass().getDeclaredConstructor().newInstance();
 				for (int i = 0; i < fields.length; i++) {
 					//System.out.println(fields[i].getName());
 					setField(fields[i], obj, res);
@@ -354,10 +354,10 @@ public enum DAO {
 			}
 			
 			res = pstmt.executeQuery();
-			T obj = clazz.newInstance();
+			T obj = clazz.getDeclaredConstructor().newInstance();
 			Field[] fields = DAOReflect.fields(obj, true); //entity.getClass().getDeclaredFields();
 			while(res.next()){
-				obj = clazz.newInstance();
+				obj = clazz.getDeclaredConstructor().newInstance();
 				for (int i = 0; i < fields.length; i++) {
 					setField(fields[i], obj, res);
 				}
@@ -385,7 +385,7 @@ public enum DAO {
 			Object entity = criteria.getIEntity();
 			res = pstmt.executeQuery();
 			Field[] fields = DAOReflect.fields(entity, true); //entity.getClass().getDeclaredFields();
-			Object obj = entity.getClass().newInstance();
+			Object obj = entity.getClass().getDeclaredConstructor().newInstance();
 			int processedRows = 0;
 			while(res.next()){
 				for (int i = 0; i < fields.length; i++) {
@@ -501,10 +501,10 @@ public enum DAO {
 			}
 			
 			res = pstmt.executeQuery();
-			T obj = clazz.newInstance();
+			T obj = clazz.getDeclaredConstructor().newInstance();
 			Field[] fields = DAOReflect.fields(obj, true); //entity.getClass().getDeclaredFields();
 			while(res.next()){
-				obj = clazz.newInstance();
+				obj = clazz.getDeclaredConstructor().newInstance();
 				for (int i = 0; i < fields.length; i++) {
 					setField(fields[i], obj, res);
 				}
@@ -533,10 +533,10 @@ public enum DAO {
 			}
 			
 			res = pstmt.executeQuery();
-			T obj = clazz.newInstance();
+			T obj = clazz.getDeclaredConstructor().newInstance();
 			Field[] fields = DAOReflect.fields(obj, true); //entity.getClass().getDeclaredFields();
 			if(res.next()){
-				obj = clazz.newInstance();
+				obj = clazz.getDeclaredConstructor().newInstance();
 				for (int i = 0; i < fields.length; i++) {
 					setField(fields[i], obj, res);
 				}
@@ -636,17 +636,17 @@ public enum DAO {
 		} else if(field.getType().equals(java.util.Date.class)){
 			DAOReflect.set(entity, field, res.getDate(DAOReflect.getName(field)));
 		} else if(field.getType().equals(double.class)){
-			DAOReflect.set(entity, field, new Double(res.getDouble(DAOReflect.getName(field))));
+			DAOReflect.set(entity, field, res.getDouble(DAOReflect.getName(field)));
 		} else if(field.getType().equals(float.class)){
-			DAOReflect.set(entity, field, new Float(res.getFloat(DAOReflect.getName(field))));
+			DAOReflect.set(entity, field, res.getFloat(DAOReflect.getName(field)));
 		} else if(field.getType().equals(boolean.class)){
-			DAOReflect.set(entity, field, new Boolean(res.getBoolean(DAOReflect.getName(field))));
+			DAOReflect.set(entity, field, res.getBoolean(DAOReflect.getName(field)));
 		} else if(field.getType().equals(int.class)){
-			DAOReflect.set(entity, field, new Integer(res.getInt(DAOReflect.getName(field))));
+			DAOReflect.set(entity, field, res.getInt(DAOReflect.getName(field)));
 		} else if(field.getType().equals(short.class)){
-			DAOReflect.set(entity, field, new Short(res.getShort(DAOReflect.getName(field))));
+			DAOReflect.set(entity, field, res.getShort(DAOReflect.getName(field)));
 		} else if(field.getType().equals(long.class)){
-			DAOReflect.set(entity, field, new Long(res.getLong(DAOReflect.getName(field))));
+			DAOReflect.set(entity, field, res.getLong(DAOReflect.getName(field)));
 		} else {
 			System.out.println("\t-->"+DAOReflect.getName(field));
 			DAOReflect.set(entity, field, res.getString(DAOReflect.getName(field)));
